# QuaRot

./: .clangd  .gitignore  CMakeLists.txt  setup.py
benchmarks/: parse_ncu.py  qlinear_benchmark.py  test_fused.py  test_fused_marlin.py
quarot/: __init__.py
quarot/kernels/: .clang-format  bindings.cpp  gemm.cu
quarot/kernels/include/: common.h  gemm.h
